--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -207,6 +207,7 @@
 |<<downloads.remove_finished,downloads.remove_finished>>|Duration (in milliseconds) to wait before removing finished downloads.
 |<<editor.command,editor.command>>|Editor (and arguments) to use for the `edit-*` commands.
 |<<editor.encoding,editor.encoding>>|Encoding to use for the editor.
+|<<fileselect.folder.command,fileselect.folder.command>>|Command (and arguments) to use for selecting a single folder in forms. The command should write the selected folder path to the specified file or stdout.
 |<<fileselect.handler,fileselect.handler>>|Handler for selecting file(s) in forms. If `external`, then the commands specified by `fileselect.single_file.command` and `fileselect.multiple_files.command` are used to select one or multiple files respectively.
 |<<fileselect.multiple_files.command,fileselect.multiple_files.command>>|Command (and arguments) to use for selecting multiple files in forms. The command should write the selected file paths to the specified file or to stdout, separated by newlines.
 |<<fileselect.single_file.command,fileselect.single_file.command>>|Command (and arguments) to use for selecting a single file in forms. The command should write the selected file path to the specified file or stdout.
@@ -2834,6 +2835,22 @@ Encoding to use for the editor.
 Type: <<types,Encoding>>
 
 Default: +pass:[utf-8]+
+
+[[fileselect.folder.command]]
+=== fileselect.folder.command
+Command (and arguments) to use for selecting a single folder in forms. The command should write the selected folder path to the specified file or stdout.
+The following placeholders are defined:
+* `{}`: Filename of the file to be written to. If not contained in any argument, the
+  standard output of the command is read instead.
+
+Type: <<types,ShellCommand>>
+
+Default: 
+
+- +pass:[xterm]+
+- +pass:[-e]+
+- +pass:[ranger]+
+- +pass:[--choosedir={}]+
 
 [[fileselect.handler]]
 === fileselect.handler
