--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -142,6 +142,8 @@ Fixed
 - When using `bindings.key_mappings` to map a key to multiple other keys,
   qutebrowser would crash. This is now handled correctly - however, note that
   it's usually better to map keys to commands instead.
+- When a minimized window is selected via `:tab-select`, it's now un-minimized
+  properly.
 
 [[v2.1.0]]
 v2.1.0 (2021-03-12)
