notifications: Change setting and connection error handling

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -181,6 +181,7 @@
 |<<content.mouse_lock,content.mouse_lock>>|Allow websites to lock your mouse pointer.
 |<<content.mute,content.mute>>|Automatically mute tabs.
 |<<content.netrc_file,content.netrc_file>>|Netrc-file for HTTP authentication.
+|<<content.notification_presenter,content.notification_presenter>>|What notification presenter to use for web notifications.
 |<<content.notifications,content.notifications>>|Allow websites to show notifications.
 |<<content.pdfjs,content.pdfjs>>|Allow pdf.js to view PDF files in the browser.
 |<<content.persistent_storage,content.persistent_storage>>|Allow websites to request persistent storage quota via `navigator.webkitPersistentStorage.requestQuota`.
@@ -2499,6 +2500,27 @@ If unset, `~/.netrc` is used.
 Type: <<types,File>>
 
 Default: empty
+
+[[content.notification_presenter]]
+=== content.notification_presenter
+What notification presenter to use for web notifications.
+Windows and macOS will always act as if this is set to `qt.`
+
+This setting requires a restart.
+
+On QtWebEngine, this setting requires Qt 5.13 or newer.
+
+On QtWebKit, this setting is unavailable.
+
+Type: <<types,String>>
+
+Valid values:
+
+ * +auto+: Use a libnotify-compatible presenter if DBus is available, silently fall back to Qt's presenter otherwise.
+ * +qt+: Use Qt's native notification presenter.
+ * +libnotify+: Use a libnotify-compatible presenter if DBus is available, show an error (and fall back to Qt's presenter) otherwise.
+
+Default: +pass:[auto]+
 
 [[content.notifications]]
 === content.notifications
