--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2524,8 +2524,6 @@ Default: +pass:[ask]+
 What notification presenter to use for web notifications.
 Note that with Qt 5.14, certain JavaScript features for notifications will not work with the libnotify notification presenter (the `click` and `close` events, as well as the `tag` option to replace existing notifications).
 
-This setting requires a restart.
-
 On QtWebEngine, this setting requires Qt 5.14 or newer.
 
 On QtWebKit, this setting is unavailable.
@@ -2535,8 +2533,9 @@ Type: <<types,String>>
 Valid values:
 
  * +auto+: Use a libnotify-compatible presenter if DBus is available, silently fall back to Qt's presenter otherwise.
- * +qt+: Use Qt's native notification presenter.
+ * +qt+: Use Qt's native notification presenter. Switching from or to this value requires a restart of qutebrowser.
  * +libnotify+: Use a libnotify-compatible presenter if DBus is available, show an error (and fall back to Qt's presenter) otherwise.
+ * +systray+: Use a notification presenter based on a systray icon. This is a reimplementation of the `qt` setting value, but with the possibility to switch to it at runtime.
 
 Default: +pass:[auto]+
 
