notifications: Add herbe backend

--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -2537,6 +2537,7 @@ Valid values:
  * +libnotify+: Use a libnotify-compatible presenter if DBus is available, show an error (and fall back to Qt's presenter) otherwise.
  * +systray+: Use a notification presenter based on a systray icon. This is a reimplementation of the `qt` setting value, but with the possibility to switch to it at runtime.
  * +messages+: Show notifications as qutebrowser messages. Most features (images, clicking/closing notifications) aren't available.
+ * +herbe+: Show notifications using herbe (github.com/dudik/herbe)
 
 Default: +pass:[auto]+
 
