--- a/doc/install.asciidoc
+++ b/doc/install.asciidoc
@@ -282,6 +282,19 @@ The binary release ships with a QtWebEngine built without proprietary codec
 support. To get support for e.g. h264/mp4 videos, you'll need to build
 QtWebEngine from source yourself with support for that enabled.
 
+Nightly builds
+~~~~~~~~~~~~~~
+
+If you want to test out new features before an official qutebrowser release, automated
+https://github.com/qutebrowser/qutebrowser/actions/workflows/bleeding.yml[nightly
+builds] are available. To download them, open the lastest run (usually the first one),
+then download the archive at the bottom of the page. Note that due to GitHub
+limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug) are contained in a
+single archive.
+
+Those builds also include variants with debug logging enabled, which can be useful to
+track down issues.
+
 https://chocolatey.org/packages/qutebrowser[Chocolatey package]
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -331,6 +344,19 @@ https://caskroom.github.io/[Homebrew Cask] package manager:
 ----
 $ brew install qutebrowser --cask
 ----
+
+Nightly builds
+~~~~~~~~~~~~~~
+
+If you want to test out new features before an official qutebrowser release, automated
+https://github.com/qutebrowser/qutebrowser/actions/workflows/bleeding.yml[nightly
+builds] are available. To download them, open the lastest run (usually the first one),
+then download the archive at the bottom of the page. Note that due to GitHub
+limitations, all variants (Windows/macOS, 32/64 bit, debug/non-debug) are contained in a
+single archive.
+
+Those builds also include variants with debug logging enabled, which can be useful to
+track down issues.
 
 Manual Install
 ~~~~~~~~~~~~~~
