--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -165,10 +165,9 @@
 |<<content.hyperlink_auditing,content.hyperlink_auditing>>|Enable hyperlink auditing (`<a ping>`).
 |<<content.images,content.images>>|Load images automatically in web pages.
 |<<content.javascript.alert,content.javascript.alert>>|Show javascript alerts.
-|<<content.javascript.can_access_clipboard,content.javascript.can_access_clipboard>>|Allow JavaScript to read from or write to the clipboard.
 |<<content.javascript.can_close_tabs,content.javascript.can_close_tabs>>|Allow JavaScript to close tabs.
 |<<content.javascript.can_open_tabs_automatically,content.javascript.can_open_tabs_automatically>>|Allow JavaScript to open new tabs without user interaction.
-|<<content.javascript.can_paste,content.javascript.can_paste>>|Allow JavaScript to paste images from the clipboard.
+|<<content.javascript.clipboard,content.javascript.clipboard>>|Allow JavaScript to read from or write to the clipboard.
 |<<content.javascript.enabled,content.javascript.enabled>>|Enable JavaScript.
 |<<content.javascript.log,content.javascript.log>>|Log levels to use for JavaScript console logging messages.
 |<<content.javascript.modal_dialog,content.javascript.modal_dialog>>|Use the standard JavaScript modal dialog for `alert()` and `confirm()`.
@@ -2306,17 +2305,6 @@ Type: <<types,Bool>>
 
 Default: +pass:[true]+
 
-[[content.javascript.can_access_clipboard]]
-=== content.javascript.can_access_clipboard
-Allow JavaScript to read from or write to the clipboard.
-With QtWebEngine, writing the clipboard as response to a user interaction is always allowed.
-
-This setting supports URL patterns.
-
-Type: <<types,Bool>>
-
-Default: +pass:[false]+
-
 [[content.javascript.can_close_tabs]]
 === content.javascript.can_close_tabs
 Allow JavaScript to close tabs.
@@ -2339,16 +2327,21 @@ Type: <<types,Bool>>
 
 Default: +pass:[false]+
 
-[[content.javascript.can_paste]]
-=== content.javascript.can_paste
-Allow JavaScript to paste images from the clipboard.
-This also requires enabling javascript can access clipboard.
+[[content.javascript.clipboard]]
+=== content.javascript.clipboard
+Allow JavaScript to read from or write to the clipboard.
+With QtWebEngine, writing the clipboard as response to a user interaction is always allowed.
 
 This setting supports URL patterns.
 
-Type: <<types,Bool>>
+Type: <<types,String>>
 
-Default: +pass:[false]+
+Valid values:
+
+ * +none+: Disable access to clipboard.
+ * +access-paste+: Allow javascript to read the clipboard.
+
+Default: +pass:[none]+
 
 [[content.javascript.enabled]]
 === content.javascript.enabled
