Support macOS dark mode for UI
Fixes #4430

Thanks to ftpd for testing!

--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -125,6 +125,8 @@ Fixed
   certain workarounds) now works correctly on OpenBSD.
 - Certain version number formats in `/etc/os-release` caused qutebrowser to
   crash. Those are now handled correctly.
+- The macOS releases now properly support Dark Mode for UI elements by setting
+  `NSRequiresAquaSystemAppearance` to false.
 
 Removed
 ~~~~~~~
