--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -3983,6 +3983,7 @@ Valid values:
  * +tabs+: Current active tab, e.g. `2`.
  * +keypress+: Display pressed keys when composing a vi command.
  * +progress+: Progress bar for the current page loading.
+ * +clock+: Display current time. Format can be changed by adding like `clock:$format`. For format strings see link:https://docs.python.org/3/library/datetime.html#strftime-strptime-behavior[the python datetime library].
 
 Default: 
 
@@ -4608,7 +4609,7 @@ When setting from `config.py`, both a string or a `re.compile(...)` object are v
 |ShellCommand|A shell command as a list.
 
 See the documentation for `List`.
-|StatusbarWidget|A Widget for the status bar.
+|StatusbarWidget|A widget for the status bar.
 
 Allows some predefined widgets and custom text-widgets via text:$CONTENT.
 |String|A string value.
