--- a/doc/help/settings.asciidoc
+++ b/doc/help/settings.asciidoc
@@ -4608,7 +4608,7 @@ When setting from `config.py`, both a string or a `re.compile(...)` object are v
 |ShellCommand|A shell command as a list.
 
 See the documentation for `List`.
-|StatusbarWidget|A Widget for the status bar.
+|StatusbarWidget|A widget for the status bar.
 
 Allows some predefined widgets and custom text-widgets via text:$CONTENT.
 |String|A string value.
