--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,24 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.2.1]]
+v2.2.1 (unreleased)
+-------------------
+
+Changed
+~~~~~~~
+
+- When an error occurs in a notification presenter, qutebrowser now shows that
+  error in the statusbar instead of just logging it.
+
+Fixed
+~~~~~
+
+- With the legacy GNOME Flashback notification daemon (not GNOME Shell), when
+  more than 20 notifications are shown at the same time, the daemon sends back a
+  (persistent) error which wasn't handled by qutebrowser. The error is now
+  displayed instead of resulting in a crash.
+
 [[v2.2.0]]
 v2.2.0 (2021-04-13)
 -------------------
