--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -35,6 +35,11 @@ Fixed
   * With the KDE Plasma notification daemon, when the same notification is
     shown twice (with <1s delay).
 - The `mkvenv.py` script now works when `ldconfig -p` is failing.
+- Fixes in userscripts:
+  * The `qute-bitwarden` userscript now still consumes returned data if the
+    Bitwarden CLI showed a warning but exited with a 0 (successful) exit code.
+  * The `qute-pass` userscript now doesn't try to match an username with
+    `--password-only`, and error messages with invalid patterns are improved.
 
 [[v2.2.0]]
 v2.2.0 (2021-04-13)
