fix(doc): mutt mailcap missing argument

--- a/doc/faq.asciidoc
+++ b/doc/faq.asciidoc
@@ -155,7 +155,7 @@ How do I use qutebrowser with mutt?::
     extension:
 +
 ----
-    text/html; qutebrowser %s; needsterminal; nametemplate=%s.html
+text/html; qutebrowser %s; needsterminal; copiousoutput; nametemplate=%s.html;
 ----
 
 What is the difference between bookmarks and quickmarks?::
