--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,37 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.2.1]]
+v2.2.1 (unreleased)
+-------------------
+
+Changed
+~~~~~~~
+
+- When an error occurs in a notification presenter, qutebrowser now shows that
+  error in the statusbar instead of just logging it.
+- New site-specific-quirk for Discord logging users out when using vertical
+  ttabs (yes, really)
+
+Fixed
+~~~~~
+
+- Certain errors from notification daemons are now displayed as non-fatal
+  errors instead of qutebrowser crashing:
+  * With the legacy GNOME Flashback notification daemon (not GNOME Shell), when
+    more than 20 notifications are currently shown.
+  * With the KDE Plasma notification daemon, when the same notification is
+    shown twice (with <1s delay).
+- The `mkvenv.py` script now works when `ldconfig -p` is failing.
+- Running `:spawn -u -o` broke in v2.2.0 and now works properly again.
+- Fixes in userscripts:
+  * The `qute-bitwarden` userscript now still consumes returned data if the
+    Bitwarden CLI showed a warning but exited with a 0 (successful) exit code.
+  * The `qute-pass` userscript now doesn't try to match a username with
+    `--password-only`, and error messages with invalid patterns are improved.
+  * The `qute-pass` userscript now avoids running `pass` twice when `--otp-only`
+    is used.
+
 [[v2.2.0]]
 v2.2.0 (2021-04-13)
 -------------------
