--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -15,6 +15,25 @@ breaking changes (such as renamed commands) can happen in minor releases.
 // `Fixed` for any bug fixes.
 // `Security` to invite users to upgrade in case of vulnerabilities.
 
+[[v2.2.2]]
+v2.2.2 (unreleased)
+-------------------
+
+Fixed
+~~~~~
+
+- When awesomewm's "naughty" notification daemon was used with a development
+  version of AwesomeWM and an unknown version number, qutebrowser would crash
+  when trying to parse the version string. This is now fixed.
+- Due to a bug with QtWebEngine 5.15.4, old Service Worker data could cause
+  renderer process crashes. This is now worked around by qutebrowser.
+- When an (broken) binding to `set-cmd-text` without any argument existed,
+  using `:` would crash, which is now fixed.
+- New site-specific quirk (again) working around not being able to type
+  accented/composed characters on Google Docs.
+- When running with `python -OO` (which is not recommended), a notification
+  being shown would result in a crash, which is now fixed.
+
 [[v2.2.1]]
 v2.2.1 (2021-04-29)
 -------------------
@@ -25,7 +44,7 @@ Changed
 - When an error occurs in a notification presenter, qutebrowser now shows that
   error in the statusbar instead of just logging it.
 - New site-specific-quirk for Discord logging users out when using vertical
-  ttabs (yes, really)
+  tabs (yes, really)
 
 Fixed
 ~~~~~
