--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -254,7 +254,7 @@ Clear all message notifications.
 
 [[click-element]]
 === click-element
-Syntax: +:click-element [*--target* 'target'] [*--force-event*] 'filter' 'value'+
+Syntax: +:click-element [*--target* 'target'] [*--force-event*] [*--select-first*] 'filter' 'value'+
 
 Click the element matching the given filter.
 
@@ -268,6 +268,7 @@ The given filter needs to result in exactly one element, otherwise, an error is 
 ==== optional arguments
 * +*-t*+, +*--target*+: How to open the clicked element (normal/tab/tab-bg/window).
 * +*-f*+, +*--force-event*+: Force generating a fake click event.
+* +*-s*+, +*--select-first*+: Select first matching element if there are multiple.
 
 [[close]]
 === close
