--- a/doc/help/commands.asciidoc
+++ b/doc/help/commands.asciidoc
@@ -254,7 +254,7 @@ Clear all message notifications.
 
 [[click-element]]
 === click-element
-Syntax: +:click-element [*--target* 'target'] [*--force-event*] [*--select-first*] 'filter' 'value'+
+Syntax: +:click-element [*--target* 'target'] [*--force-event*] [*--select-first*] 'filter' ['value']+
 
 Click the element matching the given filter.
 
@@ -269,7 +269,7 @@ The given filter needs to result in exactly one element, otherwise, an error is 
  Write value as 'x,y'.
  - focused: Click the currently focused element.
 
-* +'value'+: The value to filter for.
+* +'value'+: The value to filter for. Optional for 'focused' filter.
 
 ==== optional arguments
 * +*-t*+, +*--target*+: How to open the clicked element (normal/tab/tab-bg/window).
