--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -57,6 +57,8 @@ Changed
     there's only a single match.
 - In insert mode, `<Shift-Escape>` is now bound to `fake-key <Escape>` by
   default, i.e., sends an Escape keypress to the website.
+- Using `GM_setClipboard` in Greasemonkey scripts is now supported.
+- Using `GM_setValue` with an array/object as value is now supported.
 
 [[v2.3.1]]
 v2.3.1 (2021-07-28)
