--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -68,6 +68,8 @@ Fixed
   now also works for display (rather than inline) math.
 - The `content.proxy` setting can now correctly be set to arbitrary values via
   the `qute://settings` page again.
+- Fixed issues with Chromium version detection on Archlinux with
+  qt5-webengine 5.15.9-3.
 - Fixes for various notification-related crashes:
   * With the `tiramisu` notification server (due to invalid behavior of the server, now a non-fatal error)
   * With the `budgie` notification server when closing a notification (due to invalid behavior of the server, now worked around)
