--- a/doc/changelog.asciidoc
+++ b/doc/changelog.asciidoc
@@ -57,9 +57,12 @@ Removed
 - Support for Python 3.6 is dropped, as it's been
   https://discuss.python.org/t/python-3-6-rides-into-the-sunset/12964[end-of-life upstream]
   since December 2021. Python 3.7.0 or newer is now required.
+- Support for Qt/PyQt before 5.15.0 and QtWebEngine before 5.15.2 are now
+  dropped, as older Qt versions are
+  https://endoflife.date/qt[end-of-life upstream] since mid/late 2020
+  (5.13/5.14) and late 2021 (5.12 LTS).
 - It's planned to drop support for various legacy platforms and libraries which
   are unsupported upstream, such as:
-  * Qt before 5.15 LTS (plus adding support for Qt 6.2+)
   * The QtWebKit backend
   * macOS 10.14 (via Homebrew)
   * 32-bit Windows (via Qt)
