--- a/README.asciidoc
+++ b/README.asciidoc
@@ -72,10 +72,12 @@ https://www.the-compiler.org/pubkey.asc[0x916eb0c8fd55a072].
 Requirements
 ------------
 
+// FIXME:qt6 update this
+
 The following software and libraries are required to run qutebrowser:
 
 * https://www.python.org/[Python] 3.7 or newer
-* https://www.qt.io/[Qt] 5.12.0 or newer (5.12 LTS or 5.15 recommended, Qt 6 is
+* https://www.qt.io/[Qt] 5.15.0 or newer (5.15 LTS recommended, Qt 6 is
   not supported yet) with the following modules:
   - QtCore / qtbase
   - QtQuick (part of qtbase or qtdeclarative in some distributions)
@@ -83,7 +85,7 @@ The following software and libraries are required to run qutebrowser:
   - QtDBus (part of qtbase in some distributions; note that a connection to DBus at
     runtime is optional)
   - QtOpenGL
-  - QtWebEngine, or
+  - QtWebEngine (5.15.2 or newer), or
   - alternatively QtWebKit (5.212) - **This is not recommended** due to known security
     issues in QtWebKit, you most likely want to use qutebrowser with the
     default QtWebEngine backend (based on Chromium) instead. Quoting the
@@ -91,7 +93,7 @@ The following software and libraries are required to run qutebrowser:
     _[The latest QtWebKit] release is based on [an] old WebKit revision with known
 unpatched vulnerabilities. Please use it carefully and avoid visiting untrusted
 websites and using it for transmission of sensitive data._
-* https://www.riverbankcomputing.com/software/pyqt/intro[PyQt] 5.12.0 or newer
+* https://www.riverbankcomputing.com/software/pyqt/intro[PyQt] 5.15.0 or newer
   for Python 3
 * https://palletsprojects.com/p/jinja/[jinja2]
 * https://github.com/yaml/pyyaml[PyYAML]
